# QuantumAlgorithms

./: .gitignore  .pdm-python  Cargo.toml  README.md  pyproject.toml
notebook/: bernstein_vazirani.ipynb  deutsch.ipynb  deutsch_jozsa.ipynb  hadamard_test.ipynb  qft.ipynb  simon.ipynb  superdense.ipynb  swap_test.ipynb  teleport.ipynb
notebook_cirq/: bernstein_vazirani.ipynb  deutsch_jozsa.ipynb  superdense.ipynb  swap_test.ipynb
notebook_qiskit/: bernstein_vazirani.ipynb  deutsch_jozsa.ipynb  superdense.ipynb  swap_test.ipynb
src/: lib.rs
