[package]
name = "quantum_algorithm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.11.0"
paste = "1.0.14"
peroxide = "0.34.3"
qip = { version = "1.4.0", features = ["macros"] }
qip-macros = "1.0.0"
seq-macro = "0.3.5"
