[project]
name = ""
version = ""
description = ""
authors = [
    {name = "axect", email = "ax2ct@outlook.com"},
]
dependencies = [
    "notebook>=7.0.6",
    "pennylane>=0.33.1",
    "setuptools>=69.0.2",
    "matplotlib>=3.8.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

