[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "QuantumAlgorithms"
version = "0.0.1"
description = ""
dependencies = [
    "notebook ==7.0.6",
    "pennylane",
    "qiskit ==0.45.1",
    "matplotlib ==3.8.2",
    "numpy ==1.26.2",
    "cirq ==1.3.0",
    "setuptools",
]
